# cs153project

./: README.md  pyproject.toml
artifacts/pilot_run_001/: analysis.json  extraction.json  manifest.json  ranking.json  trials.json
configs/: budget.json  budget.yaml  credits.demo.json  credits.example.json  models.yaml  platforms.yaml
data/studies/: study_prompt_framing.json  study_social_norms.json
docs/: credit_playbook.md  experiment_protocol.md  pilot_efficacy_report.md
src/cli/: main.py
src/contracts/: __init__.py  study_spec.py
src/cost/: __init__.py  budget_manager.py  credit_validation.py
src/extraction/: __init__.py  protocol_extractor.py
src/ingest/: __init__.py  study_loader.py
src/ranking/: __init__.py  risk_ranker.py
src/simulation/: agent_factory.py  runner.py
src/stats/: __init__.py  analyzer.py
src/storage/: __init__.py  cache.py
tests/: test_budget_manager.py  test_contracts.py  test_credit_validation.py  test_extraction.py  test_simulation_stats_ranking.py
